--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Black-hold simulation with TypeScript.\r Yes, the title’s typo is intentional!",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "vite"
   },
   "repository": {
     "type": "git",
